# circuit-sdk

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  licenses.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: cd.yml  ci.yml  publish.yml
attribution/: dependencies.toml
benchmark/: Cargo.toml  README.md
benchmark/benches/: benchmarks.rs  helpers.rs
benchmark/src/: main.rs
circuit_macro/: Cargo.toml  LICENSE
circuit_macro/src/: lib.rs
compute/: Cargo.toml
compute/examples/: access_control.rs  add_two_numbers.rs  age_content_control.rs  discount_eligibility.rs  loan_eligibility.rs  loan_eligibility_1.rs  loan_eligibility_2.rs  loan_eligibility_3.rs  password_requirements.rs  salary_comparison.rs  spending.rs  temperature.rs  threshold_voting.rs
compute/src/: cir.rs  circuit.rs  evaluator.rs  executor.rs  garbler.rs  int.rs  lib.rs  mul.rs  operations.rs  simulator.rs  u256.rs  uint.rs  uint2.rs
compute/src/operations/: arithmetic.rs  bitwise.rs  circuits.rs  comparator.rs  helpers.rs  mod.rs  mux.rs  operations.rs  util.rs
compute/src/operations/circuits/: builder.rs  builder2.rs  builder_orig.rs  helpers.rs  mod.rs  traits.rs  types.rs
compute/src/operations/circuits/keccak/: mod.rs  precompile.rs
compute/tests/: arithmetic.rs  bitwise.rs  comparator.rs  int.rs  macro.rs  macro2.rs  single_macro.rs  uint.rs
server/: Cargo.toml  README.md
server/src/: util.rs
tandem/src/: circuit.rs  states.rs
vm/: Cargo.toml
