[workspace]
resolver = "2"

members = [ 
    "benchmark",
    "compute",
    "vm",
    "circuit_macro", "server",
]

[workspace.package]
authors = ["Gateway"]
publish = true
edition = "2021"
license = "MIT"

[workspace.dependencies]
anyhow = "1.0.93"
tracing = { version = "0.1.40", features = ["log"] }
