[package]
name = "benchmark"
version = "0.1.0"
edition = "2021"
license.workspace = true

[dependencies]
compute = { path = "../compute" }

[target.'cfg(target_arch = "x86_64")'.dependencies]
tfhe = { version = "0.10.0", features = [ "boolean", "shortint", "integer", "x86_64-unix" ] }

[target.'cfg(target_arch = "aarch64")'.dependencies]
tfhe = { version = "0.9.0", features = [ "boolean", "shortint", "integer", "aarch64-unix" ] }

[dev-dependencies]
criterion = "0.5" # Use Criterion for stable benchmarking

[[bench]]
name = "benchmarks"
harness = false
