[package]
name = "compute"
version = "0.1.0"
edition = "2021"

[dependencies]
# tandem = "0.3.0"
tandem = { git = "https://github.com/sine-fdn/tandem.git" }
garble_lang = { version = "0.1.8", features = ["serde"] }
rand = "0.8.3"
rand_chacha = "0.3.1"
blake3 = { version = "1.5.0", features = ["traits-preview"] }
curve25519-dalek = { version = "4.1.1", features = ["rand_core"] }
serde = "1.0"
bincode = "1.3"
hex = "0.4.3"
