[package]
name = "server"
version = "0.1.0"
authors.workspace = true
publish.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
s2n-quic = "1.52.1"
tokio = { version = "1", features = ["full"] }
compute = { path = "../compute" }
futures-util = "0.3.31"
tracing.workspace = true
tracing-subscriber = "0.3.19"
hex = "0.4.3"
bincode = "2.0.1"
anyhow = "1.0.96"
serde = "1.0"
bytes = "1.9.0"
